--- a/webapp/templates/base.html
+++ b/webapp/templates/base.html
@@ -16,8 +16,12 @@
     <body>
         {% block mainContent %}
         {% endblock %}
+        <br><br><br>
         <div class = footer>
-            <p>prova</p>
+            <p class = footerText>InShape, developed by Matteo Possamai<br>
+            GitHub: <a href = "https://github.com/MatteoPossamai "> https://github.com/MatteoPossamai </a><br>
+            LinkedIn: <a href ="https://www.linkedin.com/in/matteo-possamai-784988191/">https://www.linkedin.com/in/matteo-possamai-784988191/ </a><br>
+            </p>
         </div>
     </body>
 </html>
