--- a/webapp/static/baseStyle.css
+++ b/webapp/static/baseStyle.css
@@ -2,9 +2,21 @@ body{
     display: flex;
     flex-direction: column;
     position: relative;
+    margin: 0;
+    padding: 0;
 }
 
 .footer{
     position: absolute;
     bottom: 0;
+    margin:0;
+    background-color: #000;
+    color: #fff;
+    width:100%;
+    text-align: center;
+    font-family: 'Merriweather', serif;
 }
+
+.footer a{
+    color: white;
+} 
