--- a/webapp/templates/about.html
+++ b/webapp/templates/about.html
@@ -9,7 +9,7 @@ InShape - About
 
 {% block mainContent %}
 <h1 class = title>InShape - About</h1>
-<p class = text > InShape is the ultimate way to check how healthy you are, online. It allows
+<p class = text1 > InShape is the ultimate way to check how healthy you are, online. It allows
     you to check some parameters, understand your shape via proved scientific 
     formulas, creating some meal tips, and also keep track of your activity, 
     so you can understand really how healty you are, and where to improve your 
