--- a/webapp/templates/health.html
+++ b/webapp/templates/health.html
@@ -37,15 +37,9 @@ InShape - Healthy Meal
     </select>
     </div>
     <br><br>
-    <input type = "submit" class = sub value="See the meal" class = btn onclick="getRecipe()">
+    <button class = btn onclick="getRecipe()">See the meal</button>
 </div>
 
-<div id = "recipe">
-    <h1 id = "name"></h1>
-    <p id = "ingredient"></p>
-    <p id = "recipe"></p>
-    <p id = "macro"></p>
-</div>
-
+<div id = "recipe"></div>
 
 {% endblock %}
