--- a/webapp/templates/home.html
+++ b/webapp/templates/home.html
@@ -17,7 +17,7 @@ InShape - Home
 <form class = infoBar method="POST">  
     <input type = "submit" value = "About" class = topMenu formaction="{{ url_for('view.about') }}">
     <input type = "submit" value = "Healthy Meals" class = topMenu formaction="{{ url_for('view.healthy') }}">
-    <button value = "Your Plan" class = topMenu id = p>Your Plan (PRO)</button>
+    <input type = "submit" value = "Your Journey" class = topMenu formaction="{{ url_for('view.journey') }}">
 </form>
 
 <img src = "{{ url_for('static', filename='fruit.jpg')}}" class = image>
