Personal page setted up. Only need now graph creation, and add datas to implement it

--- a/webapp/templates/login.html
+++ b/webapp/templates/login.html
@@ -13,7 +13,7 @@
     {% endfor %}
 {% endif %}
 {% endwith %}
-<div class = general>
+<div class = general style="margin-bottom: 200px;">
     <form method="post">
     <!--Scritta login e robe simili-->
     <h1 class = LoginTitle>Login</h1>
