--- a/webapp/templates/journey.html
+++ b/webapp/templates/journey.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 {% block title %}InShape - Journey{% endblock %}
 
-{% block extra %}
-<link rel="stylesheet" type="text/css" href="{{url_for('static', filename='j.css')}}">
+{% block extrahead %}
+<script src="{{url_for('static', filename='node_modules/chartjs/dist/chart.js')}}"></script>
 {% endblock %}
 
 {% block mainContent %}
@@ -13,6 +13,20 @@
 
 <p style="margin-bottom: 200px;">Here you can keep track of your weight, and graphically see how it is going</p>
 
-<!--Make the graphics-->
+<canvas id = "myChart" height="400" width ="400" style="border: 1px solid black;"></canvas>
 
+<form method="post" style="margin-bottom: 200px;">
+    <input type="text" name = "value">
+    <input type="submit" value = "Add value" class="btn">
+</form>
+
+<script>
+
+data = {};
+
+var ctx = document.getElementById('myChart').getContext('2d');
+var myChart = new Chart(ctx, {
+    type: 'line',
+    data: data});
+</script>
 {% endblock %}
